tcw3/designer/tests/bad/comp_path_external.tcwdl
pub comp tcw3::Foo {}
